tests/compile-fail/integration_suite__integration__ecl_features__signature_with_arg0_in_not_timeline.snap
---
source: tests/integration/ecl_features.rs
expression: stderr
---
error: T(...) is invalid outside of timeline languages
  ┌─ <mapfile>:3:6
  │
3 │ 1000 T(m)
  │      ^^^^ T(...) is invalid outside of timeline languages


